Antes de remover swagger docs
